--- a/plugin.xml
+++ b/plugin.xml
@@ -133,6 +133,8 @@
             <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
             <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
         </config-file>
+        
+        <source-file src="src/assets/icon.png" target-dir="res/drawable" />
 
         <source-file
             src="src/android/LocalNotification.java"
