--- a/plugin.xml
+++ b/plugin.xml
@@ -24,7 +24,7 @@
     </engines>
 
     <!-- dependencies -->
-    <dependency id="cordova-plugin-device" />
+    <!-- <dependency id="cordova-plugin-device" /> -->
 
     <!-- info -->
     <info>
