--- a/plugin.xml
+++ b/plugin.xml
@@ -21,6 +21,7 @@
     <engines>
         <engine name="cordova" version=">=3.5.0" />
         <engine name="cordova" version="<4.0.0" />
+        <engine name="cordova-plugman" version=">=3.5.0"/>
     </engines>
 
     <!-- dependencies -->
